--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="bg-white p-8 rounded-lg shadow-xl text-center max-w-md w-full">
         <h1 class="text-4xl font-extrabold text-purple-700 mb-4 animate-bounce">
-            سلام از کلاستر کوبرنتیز!
+            Hello from Kubernetes Cluster!
         </h1>
         <p class="text-lg text-gray-700 mb-6">
-            این برنامه وب ساده در یک کانتینر داکر روی کوبرنتیز اجرا می‌شود.
+            This simple web application runs in a Docker container on Kubernetes.
         </p>
         <div class="flex justify-center space-x-4">
             <button
                 class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition duration-300 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75"
-                onclick="showMessage('خوش آمدید به کوبرنتیز!')"
+                onclick="showMessage('Welcome to Kubernetes!')"
             >
-                پیام خوش آمدید
+                Welcome Message
             </button>
             <button
                 class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition duration-300 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-75"
-                onclick="showMessage('شما با موفقیت در کوبرنتیز مستقر شدید!')"
+                onclick="showMessage('You have successfully deployed to Kubernetes!')"
             >
-                استقرار موفق
+                Successful Deployment
             </button>
         </div>
         <div id="messageBox" class="mt-8 p-4 bg-purple-100 text-purple-800 rounded-lg hidden">
@@ -41,7 +41,7 @@
                 class="mt-3 bg-purple-500 hover:bg-purple-600 text-white text-sm py-1 px-3 rounded-md"
                 onclick="hideMessage()"
             >
-                بستن
+                Close
             </button>
         </div>
     </div>
